// DBML v2
// Notes:
// - Money types use decimal(12,2)
// - Naming consistency/typos fixed
// - transactions allow exactly one source: request OR private_expense OR group_expense
// - Constraints and indexes are implemented in MongoDB validators + indexes via schema-setup.js

Table users {
  id int [pk, increment]
  username varchar [not null, unique]
  email varchar [not null, unique]
  password varchar [not null]
  first_name varchar [not null]
  last_name varchar [not null]
  age int
  income decimal(12,2) [not null, default: 0]
  created_at timestamp [not null]
}

Table groups {
  id int [pk, increment]
  name varchar [not null]
  address varchar
  created_at timestamp [not null]
}

Table group_members {
  id int [pk, increment]
  group_id int [not null]
  user_id int [not null]
  role varchar [not null]
  status varchar
}

Table bank_accounts {
  id int [pk, increment]
  user_id int [not null]
  balance decimal(12,2) [not null, default: 0]
  created_at timestamp [not null]
}

Table private_expenses {
  id int [pk, increment]
  user_id int [not null]
  amount decimal(12,2) [not null]
  theo_amount decimal(12,2) [not null]
  info text
  state varchar
  due_date timestamp
  created_at timestamp [not null]
}

Table group_expenses {
  id int [pk, increment]
  group_funding_id int [not null]
  amount decimal(12,2) [not null]
  info text
  state varchar
  due_date timestamp
  created_at timestamp [not null]
}

Table requests {
  id int [pk, increment]
  from_user_id int [not null]
  to_user_id int [not null]
  private_expense_id int
  amount decimal(12,2) [not null]
  due_date timestamp
  info varchar
  category varchar
  status varchar [not null]
  created_at timestamp [not null]
}

Table transactions {
  id int [pk, increment]
  amount decimal(12,2) [not null]
  request_id int
  group_expense_id int
  private_expense_id int
  created_at timestamp [not null]
}

Table shares {
  id int [pk, increment]
  bank_account_id int [not null]
  symbol varchar [not null]
  units decimal(12,4) [not null]
  bought_at timestamp [not null]
  bought_for decimal(12,2) [not null]
}

Table budgets {
  id int [pk, increment]
  user_id int [not null]
  category varchar
  target_amount decimal(12,2) [not null]
  current_amount decimal(12,2) [not null]
  reset_date timestamp
  created_at timestamp [not null]
}

Table group_activities {
  id int [pk, increment]
  group_id int [not null]
  info varchar
  date timestamp
  created_at timestamp [not null]
}

Table group_funding {
  id int [pk, increment]
  group_id int [not null]
  info varchar
  created_at timestamp [not null]
}

Table funding_participants {
  id int [pk, increment]
  group_funding_id int [not null]
  group_member_id int [not null]
  amount decimal(12,2)
  created_at timestamp [not null]
}

Ref: group_activities.group_id > groups.id

Ref: funding_participants.group_funding_id > group_funding.id
Ref: funding_participants.group_member_id > group_members.id

Ref: group_funding.group_id > groups.id

Ref: group_members.group_id > groups.id
Ref: group_members.user_id > users.id

Ref: budgets.user_id > users.id

Ref: bank_accounts.user_id > users.id

Ref: private_expenses.user_id > users.id

Ref: group_expenses.group_funding_id > group_funding.id

Ref: requests.from_user_id > users.id
Ref: requests.to_user_id > users.id
Ref: requests.private_expense_id > private_expenses.id

Ref: transactions.request_id > requests.id
Ref: transactions.group_expense_id > group_expenses.id
Ref: transactions.private_expense_id > private_expenses.id

Ref: shares.bank_account_id > bank_accounts.id
